--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*=== GERAL =================================*/
+/*====================== geral =================================*/
 * {
   margin: 0;
   padding: 0;
@@ -22,7 +22,7 @@
 
   --nav-height: 7.2rem;
 }
-/*=== geral 2 =================================*/
+/*===================== geral 2 =================================*/
 
 html {
   scroll-behavior: smooth;
@@ -148,7 +148,7 @@ body.menu-expanded #navigation .logo path,
   stroke: white;
 }
 
-/*=== NAV =================================*/
+/*======================== nav =================================*/
 nav {
   display: flex;
 
@@ -177,9 +177,7 @@ nav button {
   cursor: pointer;
 }
 
-
-
-/*=== MENU-EXPANDED =================================*/
+/*====================== menuExpanded =================================*/
 body.menu-expanded {
   overflow: hidden;
 }
@@ -267,7 +265,7 @@ body.menu-expanded button path {
   stroke: white;
 }
 
-/*=== home =================================*/
+/*======================== home =================================*/
 #home {
   padding-block: 0;
   padding-top: calc(4.1rem + var(--nav-height));
@@ -456,299 +454,267 @@ footer .social-links {
 /* ========== responsive =============== */
 
 @media (min-width: 1024px) {
-
-/* ========== geral =============== */
-.wrapper{
-  width: min(112rem, 100%);
-  display: grid;
-}
-
-.col-a{
-  grid-area: A;
-
-}
-
-.col-b{
-  grid-area: B;
-  
-}
-
-body{
-  overflow: auto;
-}
-
-section{
-  padding-block: 16rem;
-}
-
-section header h2{
-  font-size: 4.2rem;
-  line-height: 5.2rem;
-}
-
-
-
-/* ========== nav =============== */
-nav#navigation .wrapper * {
-margin: 0;
-padding: 0;
-visibility: initial;
-display: initial;
-opacity: initial;
-flex-direction: initial;
-position: initial;
-font-size: initial;
-transform: initial;
-color: initial;
-background-color: initial;
-/* font-weight: initial; */
-filter: initial;
-}
-
-nav#navigation .close-menu,
-nav#navigation .open-menu,
-nav#navigation .social-links{
-  display: none;
-
-}
-
-nav#navigation .menu{
- display: flex;
- align-items: center;
- justify-content: space-between;
- width: 60%;
-
-}
-
-nav#navigation .menu ul:nth-child(1){
-  display: flex;
-  gap: 3.2rem;
-  
-}
-
-nav#navigation .menu ul li a{
-  color: var(--primary-color);
-  opacity: 0.7;
-}
-
-nav#navigation .menu a.button{
-display: flex;
-justify-content: center;
-align-items: center;
-padding: 1rem 2.4rem;
-
-border: 1px solid var(--primary-color);
-border-radius: 4rem;
-
-color: var(--primary-color);
-
-font-size: 1.4rem;
-
-line-height: 1.8rem;
-
-
-/* text-transform: uppercase; */
-
-}
-
-nav#navigation .menu a.button:hover{
-  background-color: var(--primary-color);
-  border: none;
-  color: white;
-}
-
-nav#navigation.scroll .menu ul li a {
-
-  color: var(--brand-light-2);
-  opacity:0.6;
-}
-
-nav#navigation.scroll a.button{
-
-border-color: white;
-color: white;
-
-}
-
-nav#navigation .menu li a {
-  transition: opacity .4s;
-
-}
-
-nav#navigation .menu li a.active,
-nav#navigation .menu li a:hover{
-  opacity: 1;
-  font-weight: 700;
-
-}
-
-nav#navigation .menu li a::after{
-
-content:'';
-width: 0%;
-height: 2px;
-background-color: var(--primary-color);
-display: block;
-position: relative;
-bottom: -1.9rem;
-left: -1rem;
-transition: 0.2s;
-}
-
-nav#navigation.scroll .menu li a::after{
-background-color: white;
-}
-
-nav#navigation .menu li a.active::after,
-nav#navigation .menu li a:hover::after{
-  padding-inline: 1.2rem;
-  width: 100%;
-}
-
-nav#navigation.scroll .menu li a.active,
-nav#navigation.scroll .menu li a:hover{
-opacity:1;
-}
-
-nav#navigation.scroll .menu a.button.active,
-nav#navigation.scroll .menu a.button:hover{
-background-color: var(--primary-color);
-filter: brightness(1.3);
-border: none;
-}
-
-/* ========== home =============== */
-#home::before{
-  height: calc(96% - var(--nav-height));
-}
-#home{
-  padding-top: var(--nav-height);
-}
-#home .wrapper{
-  grid-template-columns: 60.5rem 1fr;
-  grid-template-areas: 
-  'A B'
-  'C C';
-}
-
-#home .col-a{
-  grid-area: A;
-  text-align: left;
-  align-self: center;
-
-}
-
-
-#home h1{
-  font-size: 5.2rem;
-}
-
-#home .content p{
-  font-size: 1.8rem;
-}
-
-#home .stats{
-  grid-area: C;
-  flex-direction: row;
-  padding: 6rem;
-  gap: 0;
-
-}
-
-#home .stats .stat + .stat{
-  border-left: 1px solid var(--primary-color);
-}
-
-#home .stats .stat{
-  flex: 1;
-}
-
-#home .button{
-  margin: 0;
-
-}
-
-#home img{
-  width: 47rem;
-}
-
-/* ========services ================ */
-
-#services h2{
-  width: 47rem;
-  margin-inline:auto;
-
-}
-
-#services .cards{
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 4rem;
-}
-
-#services .card{
-  width: 30%;
-  flex-grow: 1;
-}
-
-/* ======== about ================ */
-
-#about .wrapper{
-  grid-template-columns: 48rem 1fr;
-  grid-template-areas: 'B A';
-  gap: 6.7rem;
-}
-
-#about .content p{
-margin-bottom: 0;
-
-}
-
-#about .col-a{
-  align-self: center;
-
-}
-
-/* ======== contact ================ */
-
-#contact .wrapper{
-  grid-template-columns: 1fr 57.5rem;
-  grid-template-areas: 'A B';
-}
-
-#contact h2{ 
-  width: 40.4rem;
-  
-}
-
-/* ======== footer ================ */
-footer{
-  padding-block: 8rem;
-}
-
-
-footer .wrapper{
-grid-template-columns: 1fr 1fr;
-grid-template-areas: 'A B';
-
-}
-
-footer p{
-  margin-bottom: 0;
-}
-
-footer .col-a{
-  align-self: center;
-}
-
-footer .col-b{
-  align-self: center;
-  justify-self: flex-end;
-}
-
-
-
-
-
-
+  /* ========== geral =============== */
+  .wrapper {
+    width: min(112rem, 100%);
+    display: grid;
+  }
+
+  .col-a {
+    grid-area: A;
+  }
+
+  .col-b {
+    grid-area: B;
+  }
+
+  body {
+    overflow: auto;
+  }
+
+  section {
+    padding-block: 16rem;
+  }
+
+  section header h2 {
+    font-size: 4.2rem;
+    line-height: 5.2rem;
+  }
+
+  /* ========== nav =============== */
+  nav#navigation .wrapper * {
+    margin: 0;
+    padding: 0;
+    visibility: initial;
+    display: initial;
+    opacity: initial;
+    flex-direction: initial;
+    position: initial;
+    font-size: initial;
+    transform: initial;
+    color: initial;
+    background-color: initial;
+    font-weight: initial;
+    filter: initial;
+  }
+
+  nav#navigation .close-menu,
+  nav#navigation .open-menu,
+  nav#navigation .social-links {
+    display: none;
+  }
+
+  nav#navigation .menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 60%;
+  }
+
+  nav#navigation .menu ul:nth-child(1) {
+    display: flex;
+    gap: 3.2rem;
+  }
+
+  nav#navigation .menu ul li a {
+    color: var(--primary-color);
+    opacity: 0.7;
+  }
+
+  nav#navigation .menu a.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem 2.4rem;
+
+    border: 1px solid var(--primary-color);
+    border-radius: 4rem;
+
+    color: var(--primary-color);
+
+    font-size: 1.4rem;
+
+    line-height: 1.8rem;
+
+    /* text-transform: uppercase; */
+  }
+
+  nav#navigation .menu a.button:hover {
+    background-color: var(--primary-color);
+    border: none;
+    color: white;
+  }
+
+  nav#navigation.scroll .menu ul li a {
+    color: var(--brand-light-2);
+    opacity: 0.6;
+  }
+
+  nav#navigation.scroll a.button {
+    border-color: white;
+    color: white;
+  }
+
+  nav#navigation .menu li a {
+    transition: opacity 0.4s;
+  }
+
+  nav#navigation .menu li a.active,
+  nav#navigation .menu li a:hover {
+    opacity: 1;
+    font-weight: 700;
+  }
+
+  nav#navigation .menu li a::after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background-color: var(--primary-color);
+    display: block;
+    position: relative;
+    bottom: -1.9rem;
+    left: -1rem;
+    transition: 0.2s;
+  }
+
+  nav#navigation.scroll .menu li a::after {
+    background-color: white;
+  }
+
+  nav#navigation .menu li a.active::after,
+  nav#navigation .menu li a:hover::after {
+    padding-inline: 1.2rem;
+    width: 100%;
+  }
+
+  nav#navigation.scroll .menu li a.active,
+  nav#navigation.scroll .menu li a:hover {
+    opacity: 1;
+  }
+
+  nav#navigation.scroll .menu a.button.active,
+  nav#navigation.scroll .menu a.button:hover {
+    background-color: var(--primary-color);
+    filter: brightness(1.3);
+    border: none;
+  }
+
+  /* ========== home =============== */
+  #home::before {
+    height: calc(96% - var(--nav-height));
+  }
+  #home {
+    padding-top: var(--nav-height);
+  }
+  #home .wrapper {
+    grid-template-columns: 60.5rem 1fr;
+    grid-template-areas:
+      'A B'
+      'C C';
+  }
+
+  #home .col-a {
+    grid-area: A;
+    text-align: left;
+    align-self: center;
+  }
+
+  #home h1 {
+    font-size: 5.2rem;
+  }
+
+  #home .content p {
+    font-size: 1.8rem;
+  }
+
+  #home .stats {
+    grid-area: C;
+    flex-direction: row;
+    padding: 6rem;
+    gap: 0;
+  }
+
+  #home .stats .stat + .stat {
+    border-left: 1px solid var(--primary-color);
+  }
+
+  #home .stats .stat {
+    flex: 1;
+  }
+
+  #home .button {
+    margin: 0;
+  }
+
+  #home img {
+    width: 47rem;
+  }
+
+  /* ========services ================ */
+
+  #services h2 {
+    width: 47rem;
+    margin-inline: auto;
+  }
+
+  #services .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem;
+  }
+
+  #services .card {
+    width: 30%;
+    flex-grow: 1;
+  }
+
+  /* ======== about ================ */
+
+  #about .wrapper {
+    grid-template-columns: 48rem 1fr;
+    grid-template-areas: 'B A';
+    gap: 6.7rem;
+  }
+
+  #about .content p {
+    margin-bottom: 0;
+  }
+
+  #about .col-a {
+    align-self: center;
+  }
+
+  /* ======== contact ================ */
+
+  #contact .wrapper {
+    grid-template-columns: 1fr 57.5rem;
+    grid-template-areas: 'A B';
+  }
+
+  #contact h2 {
+    width: 40.4rem;
+  }
+
+  /* ======== footer ================ */
+  footer {
+    padding-block: 8rem;
+  }
+
+  footer .wrapper {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'A B';
+  }
+
+  footer p {
+    margin-bottom: 0;
+  }
+
+  footer .col-a {
+    align-self: center;
+  }
+
+  footer .col-b {
+    align-self: center;
+    justify-self: flex-end;
+  }
 }
